# gchip

./: CMakeLists.txt  README
cmake/Modules/: DetectArchitecture.cmake  DetectPlatform.cmake  FindGit.cmake  FindOpenGLES.cmake
docs/: games.txt  megachip10.txt  sgames.txt
gchip/: CMakeLists.txt  chip8.c  chip8.h  cmdline.c  cmdline.h  common.h  config.h.cmake  debugger.c  decode.inc  interp.c  xlat.c  xlat_x86.c
gchip_egl/: CMakeLists.txt  main.c
gchip_sdl/: CMakeLists.txt  audio.c  graphics.c  graphics.h  main.c
src/: CMakeLists.txt  cmdline.c  cmdline.h  common.h  config.h.in  xlat.c  xlat.h  xlat_x86.c
src/egl/: CMakeLists.txt
src/sdl/: CMakeLists.txt  audio.c  audio.h
